# SwDev-Project

./: .gitignore  CHANGELOG.md  README.md  cabal.project.local  flake.nix  utils.nix  xbazaar.cabal
Bazaar/: Common.hs  README.md
Bazaar/Client/: Client.hs  README.md  Referee.hs
Bazaar/Common/: Bank.hs  Cards.hs  Draw.hs  Equations.hs  Hand.hs  Pebbles.hs  README.md  RuleBook.hs
Bazaar/Common/Equations/: KarpMiller.hs  README.md  VASS.hs
Bazaar/Common/Internal/: Prelude.hs
Bazaar/Other/: README.md
Bazaar/Player/: CardMaximizer.hs  KMStrategy.hs  Mechanism.hs  Player.hs  PointMaximizer.hs  README.md  Reachability.hs  Strategy.hs
Bazaar/Referee/: Observer.hs  README.md  Referee.hs
Bazaar/Server/: README.md  Server.hs
Bazaar/State/: GameState.hs  README.md  TurnState.hs
app/: Main.hs  XClient.hs  XGamesCommon.hs  XGamesDynamic.hs  XGamesStatic.hs  XServer.hs  Xeq.hs  Xgames.hs  Xrules.hs  Xstrategy.hs  Xturn.hs
test/: Generators.hs  Main.hs
